--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.1.45",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "router": "^1.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
