--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   # main database
   postgres:
-    image: postgres:12
+    image: postgis/postgis:12-3.0
     container_name: pteditor_postgres
     restart: always
     ports:
