--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.19",
     "router": "^1.3.5",
     "vue": "^2.6.11",
+    "vue-material-design-icons": "^4.6.0",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.27",
     "vuex": "^3.3.0"
