--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "lodash": "^4.17.19",
+    "mapbox-gl": "^1.10.1",
     "router": "^1.3.5",
     "vue": "^2.6.11",
+    "vue-mapbox": "^0.4.1",
     "vue-material-design-icons": "^4.6.0",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.27",
